<resources>
    <string name="app_name">Swimming Pool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USER</string>
    <string name="nav_header_subtitle">NITC.User@nitc.ac.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_check_in">Check In</string>
    <string name="menu_search">Search</string>
    <string name="menu_visitor">Today\'s Visitor</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_payment">Update Payment</string>

    <string name="home_second">Home Second</string>
</resources>
