<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.swimmingpool.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_check"
        android:name="com.example.swimmingpool.ui.home.Check_In"
        android:label="@string/menu_check_in"
        tools:layout="@layout/check__in_fragment" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.swimmingpool.ui.home.Search"
        android:label="@string/menu_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/nav_visitors"
        android:name="com.example.swimmingpool.ui.home.Todays_Visitors"
        android:label="@string/menu_visitor"
        tools:layout="@layout/todays__visitors_fragment" />

    <fragment
        android:id="@+id/nav_remove"
        android:name="com.example.swimmingpool.ui.home.Remove"
        android:label="@string/menu_remove"
        tools:layout="@layout/remove_fragment" />

    <fragment
        android:id="@+id/nav_update_payment"
        android:name="com.example.swimmingpool.ui.home.Payment_Updation"
        android:label="@string/menu_payment"
        tools:layout="@layout/payment_updation_fragment" />

</navigation>